NULL=
bin_PROGRAMS=font-manager

font_manager_SOURCES=\
	fm-main.c \
	fm-preview-list.c \
	fm-preview-list.h \
	fm-preview-model.c \
	fm-preview-model.h \
	fm-window.c \
	fm-window.h \
	glib-helpers.h \
	gtk-helpers.c \
	gtk-helpers.h \
	herzi-main-window.c \
	herzi-main-window.h \
	$(NULL)
font_manager_LDADD=\
	$(CORE_LIBS) \
	$(NULL)
AM_CPPFLAGS=\
	$(CORE_CFLAGS) \
	$(NULL)

